src2/objects/Default_Data__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CRC_source__c</fullName>
        <label>CRC source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultTableEntry__c</fullName>
        <label>DefaultTableEntry</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUp__c</fullName>
        <label>FollowUp</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_entity__c</fullName>
        <label>Market entity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxNumberOfItem__c</fullName>
        <label>MaxNumberOfItem</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeOut__c</fullName>
        <label>TimeOut</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Default Data</label>
</CustomObject>